# greyjack-solver-rust

./: .gitignore  Cargo.toml  LICENSE.txt  README.adoc  README.md
examples/nqueens/: Cargo.toml
examples/nqueens/src/: main.rs
examples/nqueens/src/cotwin/: cot_queen.rs  mod.rs
examples/nqueens/src/domain/: chess_board.rs  column.rs  mod.rs  position.rs  queen.rs
examples/nqueens/src/observers_examples/: nqueens_observer.rs
examples/nqueens/src/persistence/: cotwin_builder.rs  domain_builder.rs  mod.rs
examples/nqueens/src/score/: incremental_score_calculator.rs  mod.rs
examples/tsp/: Cargo.toml
examples/tsp/src/: main.rs
examples/tsp/src/cotwin/: cot_stop.rs  mod.rs
examples/tsp/src/domain/: mod.rs  travel_schedule.rs
examples/tsp/src/persistence/: cotwin_builder.rs  domain_builder.rs  mod.rs
examples/tsp/src/score/: incremental_score_calculator.rs  plain_score_calculator.rs
examples/vrp_service/: Cargo.toml
examples/vrp_service/python_client/: requirements.txt
examples/vrp_service/python_client/domain/: Customer.py  Vehicle.py  VehicleRoutingPlan.py
examples/vrp_service/python_client/persistence/: DomainBuilder.py
examples/vrp_service/python_client/scripts/: solve_vrp_by_rust_service.py
examples/vrp_service/src/: main.rs
examples/vrp_service/src/cotwin/: cot_customer.rs  cot_vehicle.rs  mod.rs
examples/vrp_service/src/domain/: customer.rs  vehicle.rs  vehicle_routing_plan.rs
examples/vrp_service/src/observers/: mod.rs  rabbitmq_observer.rs
examples/vrp_service/src/persistence/: cotwin_builder.rs  domain_builder.rs
examples/vrp_service/src/score/: incremental_score_calculator.rs  mod.rs
greyjack/: Cargo.toml  README.md
greyjack/src/: lib.rs
greyjack/src/agents/: agent_builders_variants.rs  genetic_algorithm.rs  late_acceptance.rs  lshade.rs  mod.rs  simulated_annealing.rs  tabu_search.rs
greyjack/src/agents/base/: agent_base.rs  agent_statuses.rs  agent_to_agent_update.rs  individual.rs
greyjack/src/agents/metaheuristic_bases/: genetic_algorithm_base.rs  late_acceptance_base.rs  lshade_base.rs  metaheuristic_base_trait.rs  metaheuristic_kinds_and_names.rs  metaheuristics_bases_variants.rs  mod.rs  mover.rs  simulated_annealing_base.rs  tabu_search_base.rs
greyjack/src/agents/termination_strategies/: mod.rs  score_limit.rs  score_no_improvement.rs  steps_limit.rs  termination_strategies_variants.rs
greyjack/src/cotwin/: cotwin.rs  cotwin_builder_trait.rs  cotwin_entity_trait.rs  cotwin_value_types.rs  mod.rs
greyjack/src/domain/: domain_builder_trait.rs  mod.rs
greyjack/src/score_calculation/score_calculators/: incremental_score_calculator.rs  mod.rs  oop_score_calculator.rs  plain_score_calculator.rs  score_calculator_variants.rs
greyjack/src/solver/: initial_solution_variants.rs  mod.rs  observable_trait.rs  solver.rs  solver_logging_levels.rs
greyjack/src/variables/: gj_float.rs  gj_integer.rs  mod.rs  planning_variables_variants.rs
greysplanner/: Cargo.toml
greysplanner/src/: lib.rs
greysplanner/src/agents/: agent_builders_variants.rs  genetic_algorithm.rs  late_acceptance.rs  mod.rs  tabu_search.rs
greysplanner/src/agents/base/: agent_base.rs  (+4 more)
greysplanner/src/api/: mod.rs
greysplanner/src/core/: mod.rs
greysplanner/src/cotwin/: cotwin.rs  cotwin_builder_trait.rs  cotwin_entity_trait.rs  cotwin_value_types.rs  mod.rs
greysplanner/src/solver/: gp_solution.rs  mod.rs  observable_trait.rs  observer_trait.rs  solver.rs
greysplanner/src/utils/: math_utils.rs
greysplanner/src/variables/: gp_float_var.rs  gp_integer_var.rs  mod.rs  planning_variables_types.rs  planning_variables_variants.rs
(+155 files in other folders)
