#cargo-features = ["profile-rustflags"]

[package]
name = "greyjack"
edition = "2021"
version = "0.4.13"
authors = ["CameleoGrey (Egor Chnegov) <cameleogrey@yandex.ru>"]
repository = "https://github.com/CameleoGrey/greyjack-solver-rust/"
documentation = "https://github.com/CameleoGrey/greyjack-solver-rust/"
description = "Rust version of GreyJack Solver for constraint continuous, integer, mixed integer optimization problems"
license = "MIT OR Apache-2.0"
keywords = ["greyjack", "solver", "optimization", "metaheuristic", "polars"]
categories = [
    "mathematics",
	"science",
    "algorithms",
    "data-structures",
	"web-programming"
]

[dependencies]
threadpool = "1.8.1"
crossbeam-channel = "0.5.14"
rand = "0.8.5"
rand_distr = "0.4.3"
chrono = "0.4.39"
polars = { version = "0.46.0", features = ["lazy", "ndarray", "serde", "abs"] }
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.137"

#[profile.release]
#lto = true
#codegen-units = 1
#debug = true
#opt-level = 3
#rustflags = ["-C", "target-cpu=native"]