[package]
name = "greysplanner"
version = "0.1.0"
edition = "2021"

[dependencies]
threadpool = "1.8.1"
crossbeam-channel = "0.5.14"
rand = "0.8.5"
rand_distr = "0.4.3"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
ndarray-stats = "0.6.0"
chrono = "0.4.39"
polars = { version = "0.45.1", features = ["lazy", "ndarray", "serde", "abs"] }
rayon = "1.10.0"
serde = "1.0.217"
serde_json = "1.0.137"