[package]
name = "nqueens"
version = "0.4.5"
edition = "2021"
workspace = "../"
publish = false

[dependencies]
rand = "0.9.0"
greyjack = {path = "../../greyjack"}
polars = { version = "0.45.1", features = ["lazy", "ndarray", "partition_by", "abs"] }
ndarray = "0.16.1"
serde_json = "1.0.137"
rayon = "1.10.0"