[package]
name = "tsp"
version = "0.1.0"
edition = "2021"
workspace = "../"
publish = false

[dependencies]
greyjack = {path = "../../greyjack"}
polars = { version = "0.45.1", features = ["lazy", "ndarray", "partition_by", "abs"] }
regex = "1.11.1"
ndarray = "0.16.1"
serde_json = "1.0.137"
rayon = "1.10.0"